<resources>
    <string name="address">Address: </string>
    <string name="app_name">SmartHome</string>
    <string name="atticBtn">atticBtn</string>
    <string name="atticFan">Fan</string>
    <string name="atticTextView">Attic</string>
    <string name="burglar_alarm">Burglar Alarm</string>
    <string name="city">City: </string>
    <string name="confirmBtn">Confirm</string>
    <string name="country">Country: </string>
    <string name="dateOfBirth">Date of Birth: </string>
    <string name="electricityConsumption">Electricity Consumption: </string>
    <string name="electricityConsumptionValue">x</string>
    <string name="email_prompt">Enter email address</string>
    <string name="email">Email: </string>
    <string name="fire_alarm">Fire Alarm</string>
    <string name="firstName">First Name: </string>
    <string name="gender">Gender: </string>
    <string name="indoorBtn">indoorBtn</string>
    <string name="indoor_lights">Indoor lights</string>
    <string name="indoorTextView">Indoors</string>
    <string name="indoorTV">indoor</string>
    <string name="lastName">Last Name: </string>
    <string name="outdoorBtn">outdoorBtn</string>
    <string name="outdoor_lights">Outdoor lights</string>
    <string name="outdoorText">Outdoor</string>
    <string name="password_prompt">Enter password</string>
    <string name="password">Password: </string>
    <string name="phone">Phone: </string>
    <string name="postalCode">Postal Code: </string>
    <string name="powerOutage">Power Outage</string>
    <string name="radiator">Radiator</string>
    <string name="regBtn">Registration</string>
    <string name="sign_in">Sign in</string>
    <string name="stoveSwitch">Stove</string>
    <string name="temp_text">Temperature: </string>
    <string name="temp_value">x</string>
    <string name="twilightSystem">Twilight System</string>
    <string name="waterLeakage">Water Leakage</string>
    <string name="windowSwitch">Window</string>

</resources>
