<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    tools:context=".IndoorActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/indoorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indoorTextView"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_text"
        android:layout_below="@id/indoorTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_value"
        android:layout_toRightOf="@+id/tempText"
        android:layout_toEndOf="@+id/tempText"
        android:layout_alignTop="@+id/tempText"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/electCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electricityConsumption"
        android:textColor="@color/white"
        android:layout_below="@id/tempText"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/electConsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electricityConsumptionValue"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/electCons"
        android:layout_toEndOf="@+id/electCons"
        android:layout_alignTop="@+id/electCons"

        />

    <Switch
        android:id="@+id/switchIndoorLights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="332dp"
        android:text="@string/indoor_lights"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switchFireAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="334dp"
        android:layout_toEndOf="@+id/switchIndoorLights"
        android:layout_toRightOf="@+id/switchIndoorLights"
        android:text="@string/fire_alarm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switchBurglarAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressBar" />

    <Switch
        android:id="@+id/switchBurglarAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchIndoorLights"
        android:layout_alignLeft="@+id/switchIndoorLights"
        android:layout_alignStart="@+id/switchIndoorLights"
        android:text="@string/burglar_alarm"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/switchFireAlarm"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <Switch
        android:id="@+id/switchStove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stoveSwitch"
        android:textColor="@color/white"
        android:layout_below="@id/switchFireAlarm"
        android:layout_toRightOf="@id/switchBurglarAlarm"
        android:layout_toEndOf="@+id/switchBurglarAlarm"
        android:layout_alignLeft="@id/switchFireAlarm"
        android:layout_alignStart="@+id/switchFireAlarm"
        />

    <Switch
        android:id="@+id/switchWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windowSwitch"
        android:textColor="@color/white"
        android:layout_below="@id/switchBurglarAlarm"
        android:layout_alignStart="@+id/switchBurglarAlarm"
        android:layout_alignLeft="@+id/switchBurglarAlarm"
        />

    <Switch
        android:id="@+id/switchPowerOutage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powerOutage"
        android:textColor="@color/white"
        android:layout_below="@id/switchStove"
        android:layout_toRightOf="@id/switchWindow"
        android:layout_toEndOf="@+id/switchWindow"
        android:layout_alignLeft="@id/switchStove"
        android:layout_alignStart="@+id/switchStove"
        />

    <Switch
        android:id="@+id/switchTwilightSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twilightSystem"
        android:textColor="@color/white"
        android:layout_below="@id/switchWindow"
        android:layout_alignStart="@+id/switchWindow"
        android:layout_alignLeft="@+id/switchWindow"
        />

    <Switch
        android:id="@+id/radiator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiator"
        android:textColor="@color/white"
        android:layout_below="@id/switchPowerOutage"
        android:layout_toRightOf="@id/switchTwilightSystem"
        android:layout_toEndOf="@+id/switchTwilightSystem"
        android:layout_alignLeft="@id/switchPowerOutage"
        android:layout_alignStart="@+id/switchPowerOutage"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:layout_marginBottom="285dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/switchFireAlarm"
        app:layout_constraintStart_toEndOf="@+id/switchIndoorLights"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/smarthome_hp" />


</RelativeLayout>