<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <Switch
        android:id="@+id/switchOutdoorLights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="332dp"
        android:text="@string/outdoor_lights"
        android:textColor="@color/white"
        />

    <Switch
        android:id="@+id/switchBurglarAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="81dp"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="334dp"
        android:layout_toEndOf="@+id/switchOutdoorLights"
        android:layout_toRightOf="@+id/switchOutdoorLights"
        android:text="@string/burglar_alarm"
        android:textColor="@color/white"
        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/smarthome_hp" />

    <TextView
        android:id="@+id/outdoorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoorText"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="212dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_text"
        android:layout_below="@id/outdoorTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_value"
        android:layout_toRightOf="@+id/tempText"
        android:layout_toEndOf="@+id/tempText"
        android:layout_alignTop="@+id/tempText"
        android:textColor="@color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celsius"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/tempValue"
        android:layout_toEndOf="@+id/tempValue"
        android:layout_alignTop="@+id/tempValue"
        />

</RelativeLayout>