<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black">

    <ImageButton
        android:id="@+id/indoorButton"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="276dp"
        android:layout_marginRight="276dp"
        android:background="@color/black"
        android:contentDescription="@string/indoorBtn"
        android:onClick="indoorPressed"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/indoor3" />

    <ImageButton
        android:id="@+id/outdoorButton"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="157dp"
        android:layout_marginLeft="157dp"
        android:layout_marginTop="226dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:background="@color/black"
        android:contentDescription="@string/outdoorBtn"
        android:onClick="outdoorPressed"
        android:scaleType="fitXY"
        app:srcCompat="@mipmap/outdoor3" />

    <ImageButton
        android:id="@+id/atticButton"
        android:layout_width="60dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="274dp"
        android:layout_marginLeft="274dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:background="@color/black"
        android:contentDescription="@string/atticBtn"
        android:scaleType="fitXY"
        android:onClick="atticPressed"
        app:srcCompat="@mipmap/attic3" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="142dp"
        android:layout_marginLeft="142dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="381dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/smarthome_hp" />

    <TextView
        android:id="@+id/indoorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indoorTextView"
        android:textColor="@color/white"
        android:layout_below="@+id/indoorButton"
        android:layout_alignLeft="@+id/indoorButton"
        android:layout_alignStart="@+id/indoorButton"
        android:layout_alignEnd="@+id/indoorButton"
        android:layout_alignRight="@+id/indoorButton"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/outdoorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outdoorText"
        android:textColor="@color/white"
        android:layout_below="@+id/outdoorButton"
        android:layout_alignLeft="@+id/outdoorButton"
        android:layout_alignStart="@+id/outdoorButton"
        android:layout_alignEnd="@+id/outdoorButton"
        android:layout_alignRight="@+id/outdoorButton"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/atticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atticTextView"
        android:textColor="@color/white"
        android:layout_below="@+id/atticButton"
        android:layout_alignLeft="@+id/atticButton"
        android:layout_alignStart="@+id/atticButton"
        android:layout_alignEnd="@+id/atticButton"
        android:layout_alignRight="@+id/atticButton"
        android:gravity="center"
        />




</RelativeLayout>